test/error/TypeRangeMaxMin.ci
public static class Test
{
	public static bool Run()
	{
		5 .. 3 i; //ERROR: Range min greater than max
		return true;
	}
}
